# skymarshal

./: .aider.chat.history.md  .aider.input.history  .gitignore  2026-02-14-command-messagegeepers-sessioncommand-message.txt  =0.0.46  AGENTS.md  API.md  ARCHITECTURE.md  BLUESKY_TOOLS_ANALYSIS.md  BSKY_HYDRATE_README.md  BUSINESS_PLAN.md  CACHE_OPTIMIZATION.md  CHANGELOG.md  CLAUDE.md  CONSOLIDATION_TASKS.md  CONTRIBUTING.md  CRITIC_ECOSYSTEM.md  CosmicNexus.tsx  DEVELOPMENT.md  Editorial.tsx  IMPLEMENTATION_SUMMARY.md  INTEGRATION_ANALYSIS.md  INTEGRATION_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  README.md  REPOSITORY_ANALYSIS.md  REPO_AUDIT.md  RetroArcade.tsx  SKYMARSHAL_EVALUATION.md  SUGGESTIONS.md  SYSTEMD_SETUP.md  UX_AGENT.md  WEBAPP_README.md  WEB_INTERFACE_IMPROVEMENTS.md  `app.py  `tasks.py` (for NetworkX)  bsky_hydrate.py  coverage.xml  (+24 more)
.claude/: settings.local.json
.github/workflows/: publish.yml  test-install.yml
bluesky_tools/: bluesky_follower_ranker.py  bluevibes.py  pull_and_rank_posts.py  vibeagain.py
bluesky_tools/bluesky_reports/: bluesky_followers_ranked_lukesteuber.substack.com_20251022_093840.txt  bluesky_followers_ranked_lukesteuber.substack.com_20251022_094000.txt  bluesky_followers_ranked_lukesteuber.substack.com_20251022_094111.txt
conda-recipe/: meta.yaml
inbox/backup-blueflyer/: .cursorignore  .gitignore  .prettierrc  PROJECT_PLAN.md  README.md  alt_anthropic.py  alt_main.js  gifalt.html  index.html  manifest.json
loners/: CLAUDE.md  README.md  __main__.py  analyze.py  auth.py  cleanup.py  common.py  data_management.py  delete.py  export.py  find_bots.py  help.py  inactive_detection.py  nuke.py  run.py  search.py  settings.py  stats.py  system_info.py
loners/.claude/: settings.local.json
loners/WORKING/: data_management.py  stats.py
loners/broken/: ratio_analysis.py
loners/loners_ingest/: CLAUDE.md  README.md  __init__.py  analyze.py  data_management.py  export.py  help.py  nuke.py  run.py  setup.py  stats.py  system_info.py
scripts/: fetch_bluesky_posts.py  setup-distribution.sh  setup_distribution.py
simple/gpt/: output.md
site_codex/: app.py  services.py
site_codex/static/: style.css
site_gpt5/: CLAUDE.md  app.py  background_tasks.py  batch_demo.py  batch_processor.py  bluesky_posts_accesscounts_bsky_social_20250922_004011.json  bluesky_posts_accesscounts_bsky_social_20250922_004522.json  hydrate_last_500.py  hydration_service.py  improved_hydration.py  parallel_demo.py  prompt.txt  requirements.txt  utils.py  web_simple.py
skymarshal/: AGENTS.md  README.md  __init__.py  __main__.py  app.py  auth.py  banner.py  bot_detection.py  data_manager.py  deletion.py  engagement_cache.py  exceptions.py  followers.py  help.py  models.py  search.py  settings.py  ui.py
skymarshal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
skymarshal_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/: base.html  dashboard.html  login.html  statistics.html
tests/: __init__.py  conftest.py
tools/: detect_bots.py  rank_followers.py
(+137 files in other folders)
