[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skymarshal"
version = "0.1.0"
description = "Your personal Bluesky content command center - manage, analyze, and clean up your social media presence"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "Luke Steuber", email = "luke@lukesteuber.com"},
]
maintainers = [
    {name = "Luke Steuber", email = "luke@lukesteuber.com"},
]
keywords = [
    "bluesky", 
    "social-media", 
    "content-management", 
    "at-protocol", 
    "cli-tool", 
    "analytics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: Public Domain",
    "Topic :: Communications :: Chat",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "atproto>=0.0.46",
    "rich>=13.0.0",
    "flask>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/lukeslp/skymarshal"
Documentation = "https://github.com/lukeslp/skymarshal#readme"
Repository = "https://github.com/lukeslp/skymarshal.git"
Issues = "https://github.com/lukeslp/skymarshal/issues"
Author = "https://lukesteuber.com"
"Author on Bluesky" = "https://bsky.app/profile/lukesteuber.com"

[project.scripts]
skymarshal = "skymarshal.app:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]
all = [
    "skymarshal[dev]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["skymarshal*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["skymarshal"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "atproto.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "atproto_core.*"
ignore_missing_imports = true
